Remove push trigger from release workflow, keeping only manual dispatch

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,6 @@
 name: "Release dev container features & Generate Documentation"
 on:
-  push:
-    branches:
-      - main
-  # workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   deploy:
